[package]
name = "ion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
serde_json = "1.0.94"
serde = {version = "1.0.144", features = ["derive"]}
regex = "1.7.3"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.24"
iota = "0.2.3"